// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createGenerationPlan > snapshots > snapshot complete workspace generation plan 1`] = `
{
  "actionCounts": {
    "blocked": 0,
    "failed": 0,
    "generate": 3,
    "incomplete": 0,
    "skip": 0,
    "stale": 0,
    "update": 0,
  },
  "diagnosticsCount": 0,
  "documentationRoot": "logos/",
  "dryRun": true,
  "generatedAt": "2025-01-01T00:00:00.000Z",
  "items": [
    {
      "action": "generate",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [
        "dec-a",
      ],
      "dependencyStateCount": 0,
      "documentCanonicalId": "a",
      "documentId": "a",
      "documentationRootRelativePath": "logos/phase-1/a.md",
      "dryRun": true,
      "gapsCount": 0,
      "orderIndex": 0,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
    {
      "action": "generate",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [
        "dec-b",
      ],
      "dependencyStateCount": 1,
      "documentCanonicalId": "b",
      "documentId": "b",
      "documentationRootRelativePath": "logos/phase-1/b.md",
      "dryRun": true,
      "gapsCount": 1,
      "orderIndex": 1,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
    {
      "action": "generate",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [
        "dec-c",
      ],
      "dependencyStateCount": 1,
      "documentCanonicalId": "c",
      "documentId": "c",
      "documentationRootRelativePath": "logos/phase-1/c.md",
      "dryRun": true,
      "gapsCount": 0,
      "orderIndex": 2,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
  ],
  "profileId": "standard",
  "totalDocumentCount": 3,
}
`;

exports[`createGenerationPlan > snapshots > snapshot custom documentation root 1`] = `
{
  "actionCounts": {
    "blocked": 0,
    "failed": 0,
    "generate": 1,
    "incomplete": 1,
    "skip": 0,
    "stale": 0,
    "update": 0,
  },
  "diagnosticsCount": 0,
  "documentationRoot": "custom-docs/",
  "dryRun": true,
  "generatedAt": "2025-01-01T00:00:00.000Z",
  "items": [
    {
      "action": "generate",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [
        "dec-001",
      ],
      "dependencyStateCount": 0,
      "documentCanonicalId": "a",
      "documentId": "a",
      "documentationRootRelativePath": "custom-docs/phase-1/a.md",
      "dryRun": true,
      "gapsCount": 0,
      "orderIndex": 0,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
    {
      "action": "incomplete",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [],
      "dependencyStateCount": 1,
      "documentCanonicalId": "b",
      "documentId": "b",
      "documentationRootRelativePath": "custom-docs/phase-1/b.md",
      "dryRun": true,
      "gapsCount": 1,
      "orderIndex": 1,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
  ],
  "profileId": "standard",
  "totalDocumentCount": 2,
}
`;

exports[`createGenerationPlan > snapshots > snapshot dependency-blocked plan 1`] = `
{
  "actionCounts": {
    "blocked": 0,
    "failed": 0,
    "generate": 0,
    "incomplete": 3,
    "skip": 0,
    "stale": 0,
    "update": 0,
  },
  "diagnosticsCount": 0,
  "documentationRoot": "logos/",
  "dryRun": true,
  "generatedAt": "2025-01-01T00:00:00.000Z",
  "items": [
    {
      "action": "incomplete",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [],
      "dependencyStateCount": 0,
      "documentCanonicalId": "a",
      "documentId": "a",
      "documentationRootRelativePath": "logos/phase-1/a.md",
      "dryRun": true,
      "gapsCount": 1,
      "orderIndex": 0,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
    {
      "action": "incomplete",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [],
      "dependencyStateCount": 1,
      "documentCanonicalId": "b",
      "documentId": "b",
      "documentationRootRelativePath": "logos/phase-1/b.md",
      "dryRun": true,
      "gapsCount": 3,
      "orderIndex": 1,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
    {
      "action": "incomplete",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [],
      "dependencyStateCount": 1,
      "documentCanonicalId": "c",
      "documentId": "c",
      "documentationRootRelativePath": "logos/phase-1/c.md",
      "dryRun": true,
      "gapsCount": 2,
      "orderIndex": 2,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
  ],
  "profileId": "standard",
  "totalDocumentCount": 3,
}
`;

exports[`createGenerationPlan > snapshots > snapshot empty workspace generation plan 1`] = `
{
  "actionCounts": {
    "blocked": 0,
    "failed": 0,
    "generate": 0,
    "incomplete": 2,
    "skip": 0,
    "stale": 0,
    "update": 0,
  },
  "diagnosticsCount": 0,
  "documentationRoot": "logos/",
  "dryRun": true,
  "generatedAt": "2025-01-01T00:00:00.000Z",
  "items": [
    {
      "action": "incomplete",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [],
      "dependencyStateCount": 0,
      "documentCanonicalId": "a",
      "documentId": "a",
      "documentationRootRelativePath": "logos/phase-1/a.md",
      "dryRun": true,
      "gapsCount": 1,
      "orderIndex": 0,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
    {
      "action": "incomplete",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [],
      "dependencyStateCount": 1,
      "documentCanonicalId": "b",
      "documentId": "b",
      "documentationRootRelativePath": "logos/phase-1/b.md",
      "dryRun": true,
      "gapsCount": 2,
      "orderIndex": 1,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
  ],
  "profileId": "standard",
  "totalDocumentCount": 2,
}
`;

exports[`createGenerationPlan > snapshots > snapshot partial workspace generation plan 1`] = `
{
  "actionCounts": {
    "blocked": 0,
    "failed": 0,
    "generate": 1,
    "incomplete": 1,
    "skip": 0,
    "stale": 0,
    "update": 0,
  },
  "diagnosticsCount": 0,
  "documentationRoot": "logos/",
  "dryRun": true,
  "generatedAt": "2025-01-01T00:00:00.000Z",
  "items": [
    {
      "action": "generate",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [
        "dec-001",
      ],
      "dependencyStateCount": 0,
      "documentCanonicalId": "a",
      "documentId": "a",
      "documentationRootRelativePath": "logos/phase-1/a.md",
      "dryRun": true,
      "gapsCount": 0,
      "orderIndex": 0,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
    {
      "action": "incomplete",
      "blockersCount": 0,
      "confirmedAssumptionIds": [],
      "confirmedDecisionIds": [],
      "dependencyStateCount": 1,
      "documentCanonicalId": "b",
      "documentId": "b",
      "documentationRootRelativePath": "logos/phase-1/b.md",
      "dryRun": true,
      "gapsCount": 1,
      "orderIndex": 1,
      "phaseId": "phase-1",
      "staleReasonsCount": 0,
      "unresolvedQuestionIds": [],
    },
  ],
  "profileId": "standard",
  "totalDocumentCount": 2,
}
`;
